Fix related page overflow wrap.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -81,6 +81,14 @@ body {
   @import "content";
 }
 
+// Page related
+
+.page__related {
+  .archive__item-excerpt {
+    overflow-wrap: break-word;
+  }
+}
+
 // Left sidebar
 
 .sidebar {
